# yandex-metrika-logs

./: .env.example  .gitignore  LICENSE  Pipfile  README.org  README.ru.org  get_logs.py  pyproject.toml  requirements.txt
src/: config_example.py
src/db/clickhouse/: types.py
src/logs_api/: logs_api.py
src/scripts/: clickhouse.py  download_logs.py  reports.py
src/utils/: utils.py
